--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
       <version>${allure.version}</version>
     </dependency>
 
+    <!-- Allure RestAssured integration -->
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-rest-assured</artifactId>
+      <version>2.24.0</version>
+    </dependency>
+
     <!-- JSON parsing (если понадобится) -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
